[build-system]
requires = [
    "setuptools>=59.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "leaffliction"
version = "1.0.0"
authors = [
    {name = "Cyril BATTISTOLO", email = "cybattis@student.42lyon.fr"},
    {name = "Adel Lakhdar", email = "alakhdar@student.42lyon.fr"}
]
description = "Image classification by disease recognition on leaves"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "matplotlib>=3.10.0",
    "opencv-python>=4.13.0.0",
    "plantcv>=4.0.0",
    "scikit-learn>=1.7.0",
    "scikit-image>=0.25.0",
    "tensorflow>=2.17.0",
    "keras>=3.8.0"
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
]

[tool.setuptools]
py-modules = []